@@ -1,5 +1,10 @@
 nginx (1.22.0-2) UNRELEASED; urgency=medium
 
+  [ Miao Wang ]
+  * adding a new libnginx-mod-http-ndk-dev package including necessary
+    headers to build a 3rd party module depending on ndk.
+
+  [ Jan Mojžíš ]
   * d/nginx-common.nginx.service: added Systemd dependency
     Wants=network-online.target and updated Systemd "After" dependency to
     recommended NGINX values, namely:
